--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Portfolio</title>
-    <link rel="icon" href="../assets/icons8-neural-connections-48.png" type="image/x-icon" />
+    <link rel="icon" href="./assets/icons8-neural-connections-48.png" type="image/x-icon" />
     <link rel="stylesheet" href="./style.css" />
   </head>
   <body>
@@ -21,7 +21,7 @@
     <!-- created the side bar for te organization of user's information. -->
     <aside class="sidebar">
       <div id="profile-user">
-        <img id="image-profile" src="../assets/transferir.png" alt="imagem-de-perfil" />
+        <img id="image-profile" src="./assets/transferir.png" alt="imagem-de-perfil" />
         <p id="user-name">Robson Bassanesi</p>
         <p is="profession-name">Full Stack Developer</p>
       </div>
@@ -29,30 +29,30 @@
         <div>
           <ul>
             <div>
-              <li><img src="../assets/map-pin.svg" alt="pin-of-map" /><a href="">Brasil</a></li>
+              <li><img src="./assets/map-pin.svg" alt="pin-of-map" /><a href="">Brasil</a></li>
               <li>
-                <img src="../assets/briefcase.svg" alt="job-company" color="white" /><a
+                <img src="./assets/briefcase.svg" alt="job-company" color="white" /><a
                   href="https://info.cropper.com.br/"
                   target="_blank"
                   >Cropper Mercado Agro</a
                 >
               </li>
               <li>
-                <img src="../assets/github.svg" alt="github-repository" /><a
+                <img src="./assets/github.svg" alt="github-repository" /><a
                   href="https://github.com/robsonbassanesi"
                   target="_blank"
                   >robsonbassanesi</a
                 >
               </li>
               <li>
-                <img src="../assets/linkedin.svg" alt="LinkedIn-account" /><a
+                <img src="./assets/linkedin.svg" alt="LinkedIn-account" /><a
                   href="https://github.com/robsonbassanesi"
                   target="_blank"
                   >robsonbassanesi</a
                 >
               </li>
               <li>
-                <img src="../assets/mail.svg" alt="contact-email" /><a
+                <img src="./assets/mail.svg" alt="contact-email" /><a
                   href="mailto:robson@cropper.com.br"
                   target="_blank"
                   >robsonbassanesi</a
@@ -133,22 +133,22 @@
         <div id="git-informations1">
           <div class="informations">
             <div id="project-information">
-              <img src="../assets/folder.svg" alt="project-folder" />
+              <img src="./assets/folder.svg" alt="project-folder" />
               <p>my-onix</p>
             </div>
             <div id="text-center">
               <p>Consulte códigos de erro que aparecem no painel</p>
             </div>
             <div id="git-icons">
-              <img id="icon-language" src="../assets/star.svg" alt="star" />
+              <img id="icon-language" src="./assets/star.svg" alt="star" />
               <p>100</p>
-              <img id="icon-language" src="../assets/git-branch.svg" alt="git-branch" />
+              <img id="icon-language" src="./assets/git-branch.svg" alt="git-branch" />
               <p>100</p>
             </div>
             <div id="dev-language">
               <img
                 id="icon-language"
-                src="../assets/120px-Ponto_Amarelo.png"
+                src="./assets/120px-Ponto_Amarelo.png"
                 alt="yellow-point"
                 width="15px"
                 height="15px"
@@ -160,22 +160,22 @@
         <div id="git-informations2">
           <div class="informations">
             <div id="project-information">
-              <img src="../assets/folder.svg" alt="project-folder" />
+              <img src="./assets/folder.svg" alt="project-folder" />
               <p>my-onix</p>
             </div>
             <div id="text-center">
               <p>Consulte códigos de erro que aparecem no painel</p>
             </div>
             <div id="git-icons">
-              <img id="icon-language" src="../assets/star.svg" alt="star" />
+              <img id="icon-language" src="./assets/star.svg" alt="star" />
               <p>100</p>
-              <img id="icon-language" src="../assets/git-branch.svg" alt="git-branch" />
+              <img id="icon-language" src="./assets/git-branch.svg" alt="git-branch" />
               <p>100</p>
             </div>
             <div id="dev-language">
               <img
                 id="icon-language"
-                src="../assets/120px-Ponto_Amarelo.png"
+                src="./assets/120px-Ponto_Amarelo.png"
                 alt="yellow-point"
                 width="15px"
                 height="15px"
@@ -187,7 +187,7 @@
       </div>
       <div id="recent-posts">Recent Posts</div>
       <div id="posts">
-        <img id="image-post" src="../assets/transferir.png" alt="imagem-de-perfil" />
+        <img id="image-post" src="./assets/transferir.png" alt="imagem-de-perfil" />
         <div id="text-post">
           <p>Erro adb devices no Genymotion e Android Studio (React Native)</p>
           <p>2 anos atrás</p>
@@ -196,7 +196,7 @@
         </div>
       </div>
       <div id="posts">
-        <img id="image-post" src="../assets/transferir.png" alt="imagem-de-perfil" />
+        <img id="image-post" src="./assets/transferir.png" alt="imagem-de-perfil" />
         <div id="text-post">
           <p>Erro adb devices no Genymotion e Android Studio (React Native)</p>
           <p>2 anos atrás</p>
